versioned_docs/version-7.1/client-api/changes/content/_how-to-subscribe-to-time-series-changes-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Panel from "@site/src/components/Panel";
import ContentFrame from "@site/src/components/ContentFrame";

<Admonition type="note" title="">

* Use the following methods to subscribe to Time Series Changes:  
   * `ForTimeSeries`  
     Track **all** time series with a given name  
   * `ForTimeSeriesOfDocument`  
     Overload #1: Track **a specific** time series of a chosen document  
     Overload #2: Track **any** time series of a chosen document  
   * `ForAllTimeSeries`  
     Track **all** time series  

<Admonition type="warning" title="">
The `Subscribe` method on the observable these methods return accepts only an `IObserver` object
by default.  
To instead subscribe with a delegate, like the `change => ...` lambda used in the examples below,
add the [System.Reactive](https://www.nuget.org/packages/System.Reactive/) package to your project.  
This adds `Subscribe` overloads that take delegates, including ones with error and
completion handlers.  
</Admonition>

* In this article:  
   * [ForTimeSeries](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#fortimeseries)
   * [ForTimeSeriesOfDocument](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#fortimeseriesofdocument)
   * [ForAllTimeSeries](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#foralltimeseries)
   * [TimeSeriesChange and TimeSeriesChangeTypes syntax](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#timeserieschange-and-timeserieschangetypes-syntax)

</Admonition>

<Panel heading="ForTimeSeries">

Subscribe to changes in **all time series with a given name**, no matter which document they belong to,
using the `ForTimeSeries` method.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<TimeSeriesChange> ForTimeSeries(string timeSeriesName);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **timeSeriesName** | string | Name of a time series to subscribe to. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[TimeSeriesChange](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#timeserieschange-and-timeserieschangetypes-syntax)&gt; | Observable that allows to add subscriptions to time series notifications. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForTimeSeries("Likes")
    .Subscribe
        (change =>
        {
            switch (change.Type)
            {
                case TimeSeriesChangeTypes.Delete:
                    // do something
                break;
            }
        });
```

</ContentFrame>

</Panel>

<Panel heading="ForTimeSeriesOfDocument">

Use `ForTimeSeriesOfDocument` to subscribe to changes in **time series of a chosen document**.

* Two overload methods allow you to  
   * Track **a specific** time series of the chosen document  
   * Track **any** time series of the chosen document  

<ContentFrame>

### Overload #1

Use this `ForTimeSeriesOfDocument` overload to track changes in a **specific time series** of the chosen document.

#### Syntax

```csharp
IChangesObservable<TimeSeriesChange> ForTimeSeriesOfDocument(string documentId, string timeSeriesName);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **documentId** | string | ID of a document to subscribe to. |
| **timeSeriesName** | string | Name of a time series to subscribe to. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[TimeSeriesChange](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#timeserieschange-and-timeserieschangetypes-syntax)&gt; | Observable that allows to add subscriptions to time series notifications. |

#### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForTimeSeriesOfDocument("companies/1-A", "Likes")
    .Subscribe
        (change =>
        {
            switch (change.Type)
            {
                case TimeSeriesChangeTypes.Delete:
                    // do something
                break;
            }
        });
```

</ContentFrame>
<ContentFrame>

### Overload #2

Use this `ForTimeSeriesOfDocument` overload to track changes in **any time series** of the chosen document.

#### Syntax

```csharp
IChangesObservable<TimeSeriesChange> ForTimeSeriesOfDocument(string documentId);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **documentId** | string | ID of a document to subscribe to. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[TimeSeriesChange](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#timeserieschange-and-timeserieschangetypes-syntax)&gt; | Observable that allows to add subscriptions to time series notifications. |

#### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForTimeSeriesOfDocument("companies/1-A")
    .Subscribe
        (change =>
        {
            switch (change.Type)
            {
                case TimeSeriesChangeTypes.Delete:
                    // do something
                break;
            }
        });
```

</ContentFrame>

</Panel>

<Panel heading="ForAllTimeSeries">

Subscribe to changes in **all time series** using the `ForAllTimeSeries` method.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<TimeSeriesChange> ForAllTimeSeries();
```
<br />

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[TimeSeriesChange](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#timeserieschange-and-timeserieschangetypes-syntax)&gt; | Observable that allows to add subscriptions to time series notifications. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForAllTimeSeries()
    .Subscribe
        (change =>
        {
            switch (change.Type)
            {
                case TimeSeriesChangeTypes.Delete:
                    // do something
                break;
            }
        });
```

</ContentFrame>

</Panel>

<Panel heading="TimeSeriesChange and TimeSeriesChangeTypes syntax">

<Tabs>
<TabItem value="TimeSeriesChange" label="TimeSeriesChange">

**The notification object delivered to subscribers when a time series changes.**

```csharp
class TimeSeriesChange
{
    TimeSeriesChangeTypes Type
    string Name
    string DocumentId
    string CollectionName
    DateTime From
    DateTime To
    string ChangeVector
}
```
<br />

| Property | Type | Description |
| ------------- | ------------- | ----- |
| **Type** | [TimeSeriesChangeTypes](../../../client-api/changes/how-to-subscribe-to-time-series-changes.mdx#timeserieschange-and-timeserieschangetypes-syntax) | Time series change type enum |
| **Name** | string | Time Series Name |
| **DocumentId** | string | Time series Document Identifier |
| **CollectionName** | string | Time series document Collection Name |
| **From** | DateTime | Time series values From date |
| **To** | DateTime | Time series values To date |
| **ChangeVector** | string | Time series Change Vector |

</TabItem>
<TabItem value="TimeSeriesChangeTypes" label="TimeSeriesChangeTypes">

```csharp
enum TimeSeriesChangeTypes
{
    None,
    Put,
    Delete,
    Mixed,
}
```
<br />

| Name | Value |
| ---- | ----- |
| **None** | `0` |
| **Put** | `1` |
| **Delete** | `2` |
| **Mixed** | `3` |

</TabItem>
</Tabs>

</Panel>
